fix(VerificationProcess): allow substeps dots to be visible

--- a/src/components/organisms/SubstepsList/_components.substeps-list.scss
+++ b/src/components/organisms/SubstepsList/_components.substeps-list.scss
@@ -23,11 +23,18 @@
 .buv-c-substeps-list__list {
   max-height: 0;
   overflow: hidden;
-  -webkit-transition: max-height .3s ease-in;
-  -o-transition: max-height .3s ease-in;
-  transition: max-height .3s ease-in;
+  animation: slide-close .3s forwards;
 }
 
 .buv-c-substeps-list__list.is-open {
-  height: auto;
+  animation: slide-open .3s forwards;
+}
+
+@keyframes slide-open {
+  0%   { max-height: 0; overflow: hidden }
+  100% { max-height: auto; overflow: visible }
+}
+@keyframes slide-close {
+  0%   { max-height: auto; overflow: hidden }
+  100% { max-height: 0; overflow: hidden }
 }
